[package]
name = "pkr"
version = "0.1.0"
authors = ["Sebastian Kriems <bastoberto@gmx.de>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
